deploy: b123e91e59bafbb5f946fcb1caf56904f190a04d

--- a/genindex.html
+++ b/genindex.html
@@ -24,6 +24,7 @@
         <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js"></script>
         <script src="_static/jquery.js"></script>
         <script src="_static/underscore.js"></script>
+        <script src="_static/_sphinx_javascript_frameworks_compat.js"></script>
         <script src="_static/doctools.js"></script>
     
     <script type="text/javascript" src="_static/js/theme.js"></script>
@@ -219,6 +220,8 @@
       <li><a href="api/zmat.html#arc.species.zmat.add_dummy_atom">add_dummy_atom() (in module arc.species.zmat)</a>
 </li>
       <li><a href="api/main.html#arc.main.ARC.add_hydrogen_for_bde">add_hydrogen_for_bde() (arc.main.ARC method)</a>
+</li>
+      <li><a href="api/scheduler.html#arc.scheduler.Scheduler.add_label_to_unique_species_labels">add_label_to_unique_species_labels() (arc.scheduler.Scheduler method)</a>
 </li>
       <li><a href="api/converter.html#arc.species.converter.add_lone_pairs_by_atom_valance">add_lone_pairs_by_atom_valance() (in module arc.species.converter)</a>
 </li>
@@ -1150,12 +1153,14 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/main.html#arc.main.ARC.keep_checks">keep_checks (arc.main.ARC attribute)</a>
 </li>
-      <li><a href="api/ssh.html#arc.job.ssh.SSHClient.key">key (arc.job.ssh.SSHClient attribute)</a>
+      <li><a href="api/species.html#arc.species.species.ARCSpecies.keep_mol">keep_mol (arc.species.species.ARCSpecies attribute)</a>
 </li>
-      <li><a href="api/common.html#arc.common.key_by_val">key_by_val() (in module arc.common)</a>
+      <li><a href="api/ssh.html#arc.job.ssh.SSHClient.key">key (arc.job.ssh.SSHClient attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/common.html#arc.common.key_by_val">key_by_val() (in module arc.common)</a>
+</li>
       <li><a href="api/reaction.html#arc.reaction.ARCReaction.kinetics">kinetics (arc.reaction.ARCReaction attribute)</a>
 </li>
       <li><a href="api/main.html#arc.main.ARC.kinetics_adapter">kinetics_adapter (arc.main.ARC attribute)</a>
@@ -1176,6 +1181,8 @@
         <li><a href="api/species.html#arc.species.species.ARCSpecies.label">(arc.species.species.ARCSpecies attribute)</a>
 </li>
       </ul></li>
+      <li><a href="api/species.html#arc.species.species.ARCSpecies.label_atoms">label_atoms() (arc.species.species.ARCSpecies method)</a>
+</li>
       <li><a href="api/level.html#arc.level.Level">Level (class in arc.level)</a>
 </li>
       <li><a href="api/main.html#arc.main.ARC.level_of_theory">level_of_theory (arc.main.ARC attribute)</a>
@@ -1705,6 +1712,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/common.html#arc.common.sort_atoms_in_decending_label_order">sort_atoms_in_decending_label_order() (in module arc.common)</a>
+</li>
       <li><a href="api/common.html#arc.common.sort_two_lists_by_the_first">sort_two_lists_by_the_first() (in module arc.common)</a>
 </li>
       <li><a href="api/converter.html#arc.species.converter.sort_xyz_using_indices">sort_xyz_using_indices() (in module arc.species.converter)</a>
