--- a/_modules/arc/common.html
+++ b/_modules/arc/common.html
@@ -24,6 +24,7 @@
         <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
         <script src="../../_static/jquery.js"></script>
         <script src="../../_static/underscore.js"></script>
+        <script src="../../_static/_sphinx_javascript_frameworks_compat.js"></script>
         <script src="../../_static/doctools.js"></script>
     
     <script type="text/javascript" src="../../_static/js/theme.js"></script>
@@ -220,7 +221,7 @@
 <span class="n">VERSION</span> <span class="o">=</span> <span class="s1">&#39;1.1.0&#39;</span>
 
 
-<span class="n">default_job_types</span><span class="p">,</span> <span class="n">servers</span> <span class="o">=</span> <span class="n">settings</span><span class="p">[</span><span class="s1">&#39;default_job_types&#39;</span><span class="p">],</span> <span class="n">settings</span><span class="p">[</span><span class="s1">&#39;servers&#39;</span><span class="p">]</span>
+<span class="n">default_job_types</span><span class="p">,</span> <span class="n">servers</span><span class="p">,</span> <span class="n">supported_ess</span> <span class="o">=</span> <span class="n">settings</span><span class="p">[</span><span class="s1">&#39;default_job_types&#39;</span><span class="p">],</span> <span class="n">settings</span><span class="p">[</span><span class="s1">&#39;servers&#39;</span><span class="p">],</span> <span class="n">settings</span><span class="p">[</span><span class="s1">&#39;supported_ess&#39;</span><span class="p">]</span>
 
 
 <div class="viewcode-block" id="initialize_job_types"><a class="viewcode-back" href="../../api/common.html#arc.common.initialize_job_types">[docs]</a><span class="k">def</span> <span class="nf">initialize_job_types</span><span class="p">(</span><span class="n">job_types</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">dict</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
@@ -340,9 +341,8 @@
                                 <span class="sa">f</span><span class="s1">&#39;strings. Got: </span><span class="si">{</span><span class="n">server_list</span><span class="si">}</span><span class="s1"> which is a </span><span class="si">{</span><span class="nb">type</span><span class="p">(</span><span class="n">server_list</span><span class="p">)</span><span class="si">}</span><span class="s1">&#39;</span><span class="p">)</span>
     <span class="c1"># run checks:</span>
     <span class="k">for</span> <span class="n">ess</span><span class="p">,</span> <span class="n">server_list</span> <span class="ow">in</span> <span class="n">settings_dict</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
-        <span class="k">if</span> <span class="n">ess</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span> <span class="ow">not</span> <span class="ow">in</span> <span class="p">[</span><span class="s1">&#39;gaussian&#39;</span><span class="p">,</span> <span class="s1">&#39;qchem&#39;</span><span class="p">,</span> <span class="s1">&#39;molpro&#39;</span><span class="p">,</span> <span class="s1">&#39;orca&#39;</span><span class="p">,</span> <span class="s1">&#39;terachem&#39;</span><span class="p">,</span> <span class="s1">&#39;onedmin&#39;</span><span class="p">,</span> <span class="s1">&#39;psi4&#39;</span><span class="p">,</span>
-                               <span class="s1">&#39;gcn&#39;</span><span class="p">,</span> <span class="s1">&#39;heuristics&#39;</span><span class="p">,</span> <span class="s1">&#39;autotst&#39;</span><span class="p">,</span> <span class="s1">&#39;kinbot&#39;</span><span class="p">,</span> <span class="s1">&#39;xtb&#39;</span><span class="p">,</span> <span class="s1">&#39;xtb_gsm&#39;</span><span class="p">]:</span>
-            <span class="k">raise</span> <span class="n">SettingsError</span><span class="p">(</span><span class="sa">f</span><span class="s1">&#39;Got an unrecognized software in ESS settings: </span><span class="si">{</span><span class="n">ess</span><span class="si">}</span><span class="s1">&#39;</span><span class="p">)</span>
+        <span class="k">if</span> <span class="n">ess</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">supported_ess</span> <span class="o">+</span> <span class="p">[</span><span class="s1">&#39;gcn&#39;</span><span class="p">,</span> <span class="s1">&#39;heuristics&#39;</span><span class="p">,</span> <span class="s1">&#39;autotst&#39;</span><span class="p">,</span> <span class="s1">&#39;kinbot&#39;</span><span class="p">,</span> <span class="s1">&#39;xtb_gsm&#39;</span><span class="p">]:</span>
+            <span class="k">raise</span> <span class="n">SettingsError</span><span class="p">(</span><span class="sa">f</span><span class="s1">&#39;Recognized ESS software are </span><span class="si">{</span><span class="n">supported_ess</span><span class="si">}</span><span class="s1">. Got: </span><span class="si">{</span><span class="n">ess</span><span class="si">}</span><span class="s1">&#39;</span><span class="p">)</span>
         <span class="k">for</span> <span class="n">server</span> <span class="ow">in</span> <span class="n">server_list</span><span class="p">:</span>
             <span class="k">if</span> <span class="ow">not</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">server</span><span class="p">,</span> <span class="nb">bool</span><span class="p">)</span> <span class="ow">and</span> <span class="n">server</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span> <span class="ow">not</span> <span class="ow">in</span> <span class="p">[</span><span class="n">s</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span> <span class="k">for</span> <span class="n">s</span> <span class="ow">in</span> <span class="n">servers</span><span class="o">.</span><span class="n">keys</span><span class="p">()]:</span>
                 <span class="n">server_names</span> <span class="o">=</span> <span class="p">[</span><span class="n">name</span> <span class="k">for</span> <span class="n">name</span> <span class="ow">in</span> <span class="n">servers</span><span class="o">.</span><span class="n">keys</span><span class="p">()]</span>
@@ -647,6 +647,10 @@
         <span class="n">new_string</span> <span class="o">+=</span> <span class="s1">&#39;/&#39;</span> <span class="k">if</span> <span class="n">new_string</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span> <span class="o">!=</span> <span class="s1">&#39;/&#39;</span> <span class="k">else</span> <span class="s1">&#39;&#39;</span>
         <span class="n">new_string</span> <span class="o">+=</span> <span class="s1">&#39;calcs/&#39;</span> <span class="o">+</span> <span class="n">splits</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span>
         <span class="k">return</span> <span class="n">new_string</span>
+    <span class="k">if</span> <span class="s1">&#39;project_directory: &#39;</span> <span class="ow">in</span> <span class="n">string</span><span class="p">:</span>
+        <span class="n">splits</span> <span class="o">=</span> <span class="n">string</span><span class="o">.</span><span class="n">split</span><span class="p">()</span>
+        <span class="n">old_dir</span> <span class="o">=</span> <span class="n">splits</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span>
+        <span class="n">string</span> <span class="o">=</span> <span class="n">string</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="n">old_dir</span><span class="p">,</span> <span class="n">project_directory</span><span class="p">)</span>
     <span class="k">return</span> <span class="n">string</span></div>
 
 
@@ -1779,6 +1783,20 @@
             <span class="k">break</span>
         <span class="k">if</span> <span class="n">i</span> <span class="o">&gt;=</span> <span class="n">max_cycles</span><span class="p">:</span>
             <span class="k">break</span></div>
+
+
+<div class="viewcode-block" id="sort_atoms_in_decending_label_order"><a class="viewcode-back" href="../../api/common.html#arc.common.sort_atoms_in_decending_label_order">[docs]</a><span class="k">def</span> <span class="nf">sort_atoms_in_decending_label_order</span><span class="p">(</span><span class="n">mol</span><span class="p">:</span> <span class="s1">&#39;Molecule&#39;</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
+    <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">    A helper function, helpful in the context of atom mapping.</span>
+<span class="sd">    This function reassign the .atoms in Molecule with a list of atoms</span>
+<span class="sd">    with the orders based on the labels of the atoms.</span>
+<span class="sd">    for example, [int(atom.label) for atom in mol.atoms] is [1, 4, 32, 7],</span>
+<span class="sd">    then the function will re-assign the new atom with the order [1, 4, 7, 32]</span>
+<span class="sd">    </span>
+<span class="sd">    Args:</span>
+<span class="sd">        mol (Molecule): An RMG Molecule object, with labeled atoms</span>
+<span class="sd">    &quot;&quot;&quot;</span>
+    <span class="n">mol</span><span class="o">.</span><span class="n">atoms</span> <span class="o">=</span> <span class="nb">sorted</span><span class="p">(</span><span class="n">mol</span><span class="o">.</span><span class="n">atoms</span><span class="p">,</span> <span class="n">key</span><span class="o">=</span> <span class="k">lambda</span> <span class="n">x</span> <span class="p">:</span> <span class="nb">int</span><span class="p">(</span><span class="n">x</span><span class="o">.</span><span class="n">label</span><span class="p">))</span></div>
 </pre></div>
 
            </div>
