--- a/_modules/arc/processor.html
+++ b/_modules/arc/processor.html
@@ -24,6 +24,7 @@
         <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
         <script src="../../_static/jquery.js"></script>
         <script src="../../_static/underscore.js"></script>
+        <script src="../../_static/_sphinx_javascript_frameworks_compat.js"></script>
         <script src="../../_static/doctools.js"></script>
     
     <script type="text/javascript" src="../../_static/js/theme.js"></script>
@@ -501,20 +502,24 @@
                      <span class="sa">f</span><span class="s1">&#39;for this species.&#39;</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">bde_report</span>
     <span class="k">for</span> <span class="n">bde_indices</span> <span class="ow">in</span> <span class="n">source</span><span class="o">.</span><span class="n">bdes</span><span class="p">:</span>
-        <span class="n">found_a_label</span> <span class="o">=</span> <span class="kc">False</span>
+        <span class="n">found_a_label</span><span class="p">,</span> <span class="n">cyclic</span> <span class="o">=</span> <span class="kc">False</span><span class="p">,</span> <span class="kc">False</span>
         <span class="c1"># Index 0 of the tuple:</span>
         <span class="k">if</span> <span class="n">source</span><span class="o">.</span><span class="n">mol</span><span class="o">.</span><span class="n">atoms</span><span class="p">[</span><span class="n">bde_indices</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="o">-</span> <span class="mi">1</span><span class="p">]</span><span class="o">.</span><span class="n">is_hydrogen</span><span class="p">():</span>
             <span class="n">e1</span> <span class="o">=</span> <span class="n">species_dict</span><span class="p">[</span><span class="s1">&#39;H&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">e0</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="n">bde_label</span> <span class="o">=</span> <span class="sa">f</span><span class="s1">&#39;</span><span class="si">{</span><span class="n">label</span><span class="si">}</span><span class="s1">_BDE_</span><span class="si">{</span><span class="n">bde_indices</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span><span class="si">}</span><span class="s1">_</span><span class="si">{</span><span class="n">bde_indices</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span><span class="si">}</span><span class="s1">_A&#39;</span>
-            <span class="k">if</span> <span class="n">bde_label</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">species_dict</span><span class="o">.</span><span class="n">keys</span><span class="p">():</span>
+            <span class="n">bde_cyclic_label</span> <span class="o">=</span> <span class="sa">f</span><span class="s1">&#39;</span><span class="si">{</span><span class="n">label</span><span class="si">}</span><span class="s1">_BDE_</span><span class="si">{</span><span class="n">bde_indices</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span><span class="si">}</span><span class="s1">_</span><span class="si">{</span><span class="n">bde_indices</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span><span class="si">}</span><span class="s1">_cyclic&#39;</span>
+            <span class="n">cyclic</span> <span class="o">=</span> <span class="n">bde_cyclic_label</span> <span class="ow">in</span> <span class="n">species_dict</span><span class="o">.</span><span class="n">keys</span><span class="p">()</span>
+            <span class="k">if</span> <span class="ow">not</span> <span class="n">cyclic</span> <span class="ow">and</span> <span class="n">bde_label</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">species_dict</span><span class="o">.</span><span class="n">keys</span><span class="p">():</span>
                 <span class="n">logger</span><span class="o">.</span><span class="n">error</span><span class="p">(</span><span class="sa">f</span><span class="s1">&#39;Could not find BDE species </span><span class="si">{</span><span class="n">bde_label</span><span class="si">}</span><span class="s1"> for generating a BDE report for </span><span class="si">{</span><span class="n">label</span><span class="si">}</span><span class="s1">. &#39;</span>
                              <span class="sa">f</span><span class="s1">&#39;Not generating a BDE report for this species.&#39;</span><span class="p">)</span>
                 <span class="k">return</span> <span class="nb">dict</span><span class="p">()</span>
             <span class="n">found_a_label</span> <span class="o">=</span> <span class="kc">True</span>
-            <span class="n">e1</span> <span class="o">=</span> <span class="n">species_dict</span><span class="p">[</span><span class="n">bde_label</span><span class="p">]</span><span class="o">.</span><span class="n">e0</span>
+            <span class="n">e1</span> <span class="o">=</span> <span class="n">species_dict</span><span class="p">[</span><span class="n">bde_cyclic_label</span> <span class="k">if</span> <span class="n">cyclic</span> <span class="k">else</span> <span class="n">bde_label</span><span class="p">]</span><span class="o">.</span><span class="n">e0</span>
         <span class="c1"># Index 1 of the tuple:</span>
-        <span class="k">if</span> <span class="n">source</span><span class="o">.</span><span class="n">mol</span><span class="o">.</span><span class="n">atoms</span><span class="p">[</span><span class="n">bde_indices</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span> <span class="o">-</span> <span class="mi">1</span><span class="p">]</span><span class="o">.</span><span class="n">is_hydrogen</span><span class="p">():</span>
+        <span class="k">if</span> <span class="n">cyclic</span><span class="p">:</span>
+            <span class="n">e2</span> <span class="o">=</span> <span class="mi">0</span>
+        <span class="k">elif</span> <span class="n">source</span><span class="o">.</span><span class="n">mol</span><span class="o">.</span><span class="n">atoms</span><span class="p">[</span><span class="n">bde_indices</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span> <span class="o">-</span> <span class="mi">1</span><span class="p">]</span><span class="o">.</span><span class="n">is_hydrogen</span><span class="p">():</span>
             <span class="n">e2</span> <span class="o">=</span> <span class="n">species_dict</span><span class="p">[</span><span class="s1">&#39;H&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">e0</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="n">letter</span> <span class="o">=</span> <span class="s1">&#39;B&#39;</span> <span class="k">if</span> <span class="n">found_a_label</span> <span class="k">else</span> <span class="s1">&#39;A&#39;</span>
